Layout Bug: Buttons neben Suchfeld
Closes #4874

Merge request studip/studip!3651

--- a/resources/assets/stylesheets/scss/search.scss
+++ b/resources/assets/stylesheets/scss/search.scss
@@ -186,6 +186,10 @@ div#div-search-input {
 
 }
 
+.button.seach-button {
+    border-radius: 0;
+}
+
 #search-active-filters {
     display: flex;
     flex-direction: row;
